# SistemaTelemetria

./: .pre-commit-config.yaml  README.md  data.csv  manage.py  pyproject.toml  received_data.csv  requirements.txt  webapp.py  webappTiempoReal.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: labeler.yml  manage-labels.yml  pre-commit.yml
Sistema Telemetría/: creaDatos.java  data.csv  data_genE1.py  datosSimuladorCorregidos.csv  datosSimuladorV1.csv  div.py  entregaGraficas1 (1).py  entregaGraficas1.py  predictor.py
Sistema Telemetría/demo1/: data.csv  data_genE1.py  datosSimuladorCorregidos.csv  datosSimuladorV1.csv  entregaGraficas1.py
dash_webapp/: datosSimulados.csv  entregaGraficas1.py  received_data.csv  receptor.py  webapp.py  webappTiempoReal.py
generador_datos/: creaDatos.java  data_genCSV.py  testData.csv
gtUPV/: asgi.py  settings.py  urls.py  wsgi.py
matplot/: home.html  views.py
predictor/: Prueba.py  predictor.py
